--- a/web_src/package.json
+++ b/web_src/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "js-yaml": "^4.1.0",
     "uuidv7": "^1.0.2",
     "vue": "^3.5.13",
     "vue-router": "4"
